# AntanI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  index.html  knip.json  package.json  vitest.config.ts
.github/workflows/: bump-tap.yml  ci.yml  release.yml
.husky/: pre-push
scripts/: setup-rust-tools.sh
src/: AGENTS.md  App.tsx  CLAUDE.md  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: AGENTS.md  CLAUDE.md  backup.rs  backup_tests.rs  git.rs  git_watcher.rs  ide_bridge.rs  ide_webview.rs  lib.rs  main.rs  menu.rs  pty.rs  sound.rs  state.rs  updater.rs  vscode_server.rs  window_restore.rs
src-tauri/src/backup/: archive.rs  archive_validation.rs  transaction.rs
src-tauri/src/backup_tests/: security.rs
src-tauri/src/ide_bridge/: tests.rs
src-tauri/vscode-extension/: README.md  antani-diff-bridge.vsix  bridge.js  bridge.test.js  extension.js  package.json
src/components/: BackupSettings.tsx  ColorPicker.tsx  ConfirmPopover.tsx  ContextMenu.tsx  EmptyPane.tsx  FirstRunVscodeModal.tsx  FreeRamModal.tsx  Icons.tsx  IdeLayer.tsx  IdeView.tsx  ImportVscodeModal.tsx  InjectBar.tsx  PaneHeader.tsx  ProjectRow.tsx  RevertFileModal.tsx  SettingsPage.tsx  SettingsSection.tsx  Sidebar.tsx  SourceControlSidebar.tsx  SplitDivider.tsx  SplitGrid.tsx  SplitGroupChip.tsx  StatusBar.tsx  TabChip.tsx  TabStrip.tsx  TerminalLayer.tsx  TerminalView.tsx  Workspace.tsx  terminalFileLinkProvider.ts  useIdeFileOpen.ts
src/lib/: api.ts  (+28 more)
(+2 files in other folders)
